--- a/src/pages/placeOrder/Placeorder.css
+++ b/src/pages/placeOrder/Placeorder.css
@@ -34,10 +34,20 @@
 
 .placeOrder-right {
   width: 100%;
-  max-width: max(40%,500px);
+  max-width: max(40%, 500px);
   margin-top: 100px;
 }
 
-.placeOrder .cart-totals button{
-    margin-top: 10px;
+.placeOrder .cart-totals button {
+  margin-top: 10px;
+}
+
+@media (max-width: 750px) {
+  .placeOrder {
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .placeOrder-right {
+    margin-top: 30px;
+  }
 }
